# Homework_4

./: .flake8  README.md  coverage.txt  main.py  pyproject.toml
src/: Category_class.py  Product_class.py  category.py  exceptions.py  order.py  product.py  utils.py  сategory.py
tests/: test_Category_class.py  test_Product_class.py  test_category.py  test_order.py  test_product.py  test_utils.py
